fix: more stuff