@@ -1,6 +1,9 @@
 package com.runclub.api.service;
 
+import com.runclub.api.api.ApiException;
 import com.runclub.api.entity.*;
+import com.runclub.api.model.GoalProgress;
+import com.runclub.api.model.LeaderboardEntry;
 import com.runclub.api.repository.*;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
@@ -10,7 +13,6 @@ import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Service
 public class ClubGoalService {
@@ -36,18 +38,18 @@ public class ClubGoalService {
         this.clubMembershipRepository = clubMembershipRepository;
     }
 
-    public ClubGoal createGoal(UUID clubId, String name, BigDecimal targetDistanceMiles, LocalDate startDate, LocalDate endDate, UUID createdByUserId) {
+    public ClubGoal createGoal(UUID clubId, String name, BigDecimal targetDistanceMiles,
+                               LocalDate startDate, LocalDate endDate, UUID createdByUserId) {
         Club club = clubRepository.findById(clubId)
-            .orElseThrow(() -> new RuntimeException("Club not found"));
+            .orElseThrow(() -> ApiException.notFound("club"));
         User creator = userRepository.findById(createdByUserId)
-            .orElseThrow(() -> new RuntimeException("User not found"));
+            .orElseThrow(() -> ApiException.notFound("user"));
 
-        // Verify creator is admin or owner
         ClubMembership membership = clubMembershipRepository.findByClubAndUser(club, creator)
-            .orElseThrow(() -> new RuntimeException("User is not a member of this club"));
+            .orElseThrow(() -> ApiException.forbidden("User is not a member of this club"));
 
         if (!("owner".equals(membership.getRole()) || "admin".equals(membership.getRole()))) {
-            throw new RuntimeException("Only club admins and owners can create goals");
+            throw ApiException.forbidden("Only club admins and owners can create goals");
         }
 
         ClubGoal goal = new ClubGoal();
@@ -64,26 +66,23 @@ public class ClubGoalService {
 
     public GoalContribution recordContribution(UUID goalId, UUID userId, UUID activityId) {
         ClubGoal goal = clubGoalRepository.findById(goalId)
-            .orElseThrow(() -> new RuntimeException("Goal not found"));
+            .orElseThrow(() -> ApiException.notFound("goal"));
         User user = userRepository.findById(userId)
-            .orElseThrow(() -> new RuntimeException("User not found"));
+            .orElseThrow(() -> ApiException.notFound("user"));
         Activity activity = activityRepository.findById(activityId)
-            .orElseThrow(() -> new RuntimeException("Activity not found"));
+            .orElseThrow(() -> ApiException.notFound("activity"));
 
-        // Verify activity belongs to user
         if (!activity.getUser().getId().equals(userId)) {
-            throw new RuntimeException("Activity does not belong to the user");
+            throw ApiException.forbidden("Activity does not belong to the user");
         }
 
-        // Check if activity is within goal date range
         LocalDate activityDate = activity.getStartDate().toLocalDate();
         if (activityDate.isBefore(goal.getStartDate()) || activityDate.isAfter(goal.getEndDate())) {
-            throw new RuntimeException("Activity is outside the goal date range");
+            throw ApiException.badRequest("Activity is outside the goal date range");
         }
 
-        // Check if contribution already exists for this activity
         if (goalContributionRepository.findByGoalAndActivity(goal, activityId).isPresent()) {
-            throw new RuntimeException("Contribution for this activity already exists");
+            throw ApiException.conflict("Contribution for this activity already exists");
         }
 
         GoalContribution contribution = new GoalContribution();
@@ -96,34 +95,31 @@ public class ClubGoalService {
         return goalContributionRepository.save(contribution);
     }
 
-    public Map<String, Object> getGoalProgress(UUID goalId) {
+    public GoalProgress getGoalProgress(UUID goalId) {
         ClubGoal goal = clubGoalRepository.findById(goalId)
-            .orElseThrow(() -> new RuntimeException("Goal not found"));
+            .orElseThrow(() -> ApiException.notFound("goal"));
 
         BigDecimal totalContributed = goalContributionRepository.sumDistancesByGoal(goal);
-        if (totalContributed == null) {
-            totalContributed = BigDecimal.ZERO;
-        }
+        if (totalContributed == null) totalContributed = BigDecimal.ZERO;
 
         BigDecimal target = goal.getTargetDistanceMiles() != null ? goal.getTargetDistanceMiles() : BigDecimal.ONE;
-        BigDecimal progress = totalContributed.divide(target, 2, java.math.RoundingMode.HALF_UP)
+        BigDecimal percent = totalContributed.divide(target, 2, java.math.RoundingMode.HALF_UP)
             .multiply(new BigDecimal("100"));
 
-        Map<String, Object> result = new HashMap<>();
-        result.put("goal_id", goal.getId());
-        result.put("name", goal.getName());
-        result.put("target_miles", goal.getTargetDistanceMiles());
-        result.put("total_contributed", totalContributed);
-        result.put("progress_percent", progress);
-        result.put("start_date", goal.getStartDate());
-        result.put("end_date", goal.getEndDate());
-
-        return result;
+        GoalProgress p = new GoalProgress();
+        p.goalId = goal.getId();
+        p.name = goal.getName();
+        p.targetDistanceMiles = goal.getTargetDistanceMiles();
+        p.totalDistanceMiles = totalContributed;
+        p.progressPercent = percent;
+        p.startDate = goal.getStartDate() != null ? goal.getStartDate().toString() : null;
+        p.endDate = goal.getEndDate() != null ? goal.getEndDate().toString() : null;
+        return p;
     }
 
-    public List<Map<String, Object>> getGoalLeaderboard(UUID goalId) {
+    public List<LeaderboardEntry> getGoalLeaderboard(UUID goalId) {
         ClubGoal goal = clubGoalRepository.findById(goalId)
-            .orElseThrow(() -> new RuntimeException("Goal not found"));
+            .orElseThrow(() -> ApiException.notFound("goal"));
 
         List<GoalContribution> contributions = goalContributionRepository.findByGoal(goal);
 
@@ -135,34 +131,30 @@ public class ClubGoalService {
             userTotals.put(user, current.add(distance));
         }
 
-        List<Map<String, Object>> leaderboard = new ArrayList<>();
-        List<Map.Entry<User, BigDecimal>> sortedEntries = userTotals.entrySet().stream()
+        List<Map.Entry<User, BigDecimal>> sorted = userTotals.entrySet().stream()
             .sorted((a, b) -> b.getValue().compareTo(a.getValue()))
-            .collect(Collectors.toList());
+            .toList();
 
-        for (int i = 0; i < sortedEntries.size(); i++) {
-            Map.Entry<User, BigDecimal> entry = sortedEntries.get(i);
-            Map<String, Object> item = new HashMap<>();
-            item.put("rank", i + 1);
-            item.put("user_id", entry.getKey().getId());
-            item.put("display_name", entry.getKey().getDisplayName());
-            item.put("email", entry.getKey().getEmail());
-            item.put("total_distance_miles", entry.getValue());
-            leaderboard.add(item);
+        List<LeaderboardEntry> result = new ArrayList<>();
+        for (int i = 0; i < sorted.size(); i++) {
+            LeaderboardEntry e = new LeaderboardEntry();
+            e.rank = i + 1;
+            e.user = com.runclub.api.model.User.from(sorted.get(i).getKey());
+            e.totalDistanceMiles = sorted.get(i).getValue();
+            result.add(e);
         }
-
-        return leaderboard;
+        return result;
     }
 
     public Page<ClubGoal> getActiveGoals(UUID clubId, Pageable pageable) {
         Club club = clubRepository.findById(clubId)
-            .orElseThrow(() -> new RuntimeException("Club not found"));
+            .orElseThrow(() -> ApiException.notFound("club"));
         return clubGoalRepository.findByClubAndEndDateGreaterThanEqual(club, LocalDate.now(), pageable);
     }
 
     public Page<ClubGoal> getAllGoals(UUID clubId, Pageable pageable) {
         Club club = clubRepository.findById(clubId)
-            .orElseThrow(() -> new RuntimeException("Club not found"));
+            .orElseThrow(() -> ApiException.notFound("club"));
         return clubGoalRepository.findByClub(club, pageable);
     }
 }
